<?xml version="1.0"?>
<package format="2">
    <name>fpsdk_apps</name>
    <version>1.0.0</version>
    <description>Fixposition SDK: Apps</description>
    <maintainer email="support@fixposition.com">Fixposition Support</maintainer>
    <license>MIT</license>
    <export>
        <build_type>cmake</build_type>
    </export>
    <depend>fpsdk_common</depend>
    <depend>fpsdk_ros1</depend>
</package>
