<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>fpsdk_ros2</name>
    <version>1.0.0</version>
    <description>Fixposition SDK: ROS2 library</description>
    <maintainer email="support@fixposition.com">Fixposition Support</maintainer>
    <license>MIT</license>
    <export>
        <!-- This is not quite correct (it should be "cmake"). However, ROS2 (colcon) doesn't care and ROS1 (catkin)
             conveniently ignores this package if we set it to something it doesn't know ("ament_camake"). It does so
             with a warning, though. So the correct way of ignoring is placing a CATKIN_IGNORE file here. See section
             FPSDK_BUILD_ROS in fpsdk_doc/fpsdk_build.hpp -->
        <build_type>ament_cmake</build_type>
    </export>
    <depend>fpsdk_common</depend>
</package>
