<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>fpsdk_ros2</name>
    <version>1.0.0</version>
    <description>Fixposition SDK: ROS2 library</description>
    <maintainer email="support@fixposition.com">Fixposition Support</maintainer>
    <license>MIT</license>
    <export>
        <build_type>cmake</build_type>
    </export>
    <depend>fpsdk_common</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>tf2_msgs</depend>
    <depend>rosbag2_cpp</depend>
</package>
