<?xml version="1.0"?>
<package format="2">
    <name>ros1_fpsdk_demo</name>
    <version>1.0.0</version>
    <description>Fixposition SDK: ROS1 Demo</description>
    <maintainer email="support@fixposition.com">Fixposition Support</maintainer>
    <license>MIT</license>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>fpsdk_common</depend>
    <depend>fpsdk_ros1</depend>
    <depend>roscpp</depend>
    <depend>std_msgs</depend>
</package>
